tahini/tests/arrays3.tah
var xy = 10;
print xy[2];

// RuntimeError: Can only access elements of a list, map or a string.
// [at line 2 in arrays3.tah]
